--- a/porfolio.html
+++ b/porfolio.html
@@ -1,1 +1,3 @@
-<h1>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
+<html lang='en'>
+    <h1>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
+</html>
