--- a/porfolio.html
+++ b/porfolio.html
@@ -1,3 +1,6 @@
 <html lang='en'>
+    <head>
+        Marc Ferraro
+    </head>
     <h1>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
 </html>
