--- a/porfolio.html
+++ b/porfolio.html
@@ -1,6 +1,8 @@
 <html lang='en'>
     <head>
-        Marc Ferraro
+        <title>
+            Marc Ferraro
+        </title>
     </head>
     <h1>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
 </html>
