nav and name added

--- a/porfolio.html
+++ b/porfolio.html
@@ -4,5 +4,8 @@
             Marc Ferraro
         </title>
     </head>
-    <h1>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
+    <nav>
+        <h1>Marc Ferraro</h1>
+    </nav>
+    <h4>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
 </html>
