--- a/porfolio.html
+++ b/porfolio.html
@@ -4,7 +4,7 @@
             Marc Ferraro
         </title>
     </head>
-    <nav>
+    <nav class='navbar'>
         <h1>Marc Ferraro</h1>
     </nav>
     <h4>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
