--- a/porfolio.html
+++ b/porfolio.html
@@ -3,6 +3,7 @@
         <title>
             Marc Ferraro
         </title>
+        <link rel="stylesheet" href="engineering.css">
     </head>
     <nav class='navbar'>
         <h1>Marc Ferraro</h1>
