--- a/porfolio.html
+++ b/porfolio.html
@@ -5,8 +5,10 @@
         </title>
         <link rel="stylesheet" href="engineering.css">
     </head>
-    <nav class='navbar'>
-        <h1>Marc Ferraro</h1>
-    </nav>
-    <h4>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
+    <body>
+        <nav class='navbar'>
+            <h1>Marc Ferraro</h1>
+        </nav>
+        <h4>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
+    </body>
 </html>
