--- a/porfolio.html
+++ b/porfolio.html
@@ -3,11 +3,13 @@
         <title>
             Marc Ferraro
         </title>
-        <link rel="stylesheet" href="engineering.css">
+        <link rel='stylesheet' href='engineering.css'>
     </head>
     <body>
         <nav class='navbar'>
             <h1>Marc Ferraro</h1>
+            <a href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
+            
         </nav>
         <h4>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
     </body>
