--- a/porfolio.html
+++ b/porfolio.html
@@ -9,7 +9,7 @@
         <nav class='navbar'>
             <h1>Marc Ferraro</h1>
             <a href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
-            
+            <a href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
         </nav>
         <h4>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
     </body>
