--- a/porfolio.html
+++ b/porfolio.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav class='navbar'>
-            <h1>Marc Ferraro</h1>
+            <h1 class='nav-name'>Marc Ferraro</h1>
             <a href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
             <a href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
         </nav>
