--- a/porfolio.html
+++ b/porfolio.html
@@ -11,6 +11,7 @@
             <a href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
             <a href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
         </nav>
+        <img src=''/>
         <h4 class='pitch'>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
     </body>
 </html>
