--- a/porfolio.html
+++ b/porfolio.html
@@ -10,8 +10,9 @@
             <h1 class='nav-name'>Marc Ferraro</h1>
             <a href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
             <a href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
+            <a href='https://marc-ferraro.medium.com/'>LinkedIn</a>
         </nav>
         <img class='profile-pic' src='Ivy Profile.jpg'/>
-        <h4 class='pitch'>Hi, I'm Marc and I am a software enginner and dance artist.</h1>
+        <h4 class='pitch'>Hi, I'm Marc and I am a software engineer and dance artist.</h1>
     </body>
 </html>
