--- a/porfolio.html
+++ b/porfolio.html
@@ -14,17 +14,19 @@
         </nav>
         <!-- <img class='profile-pic' src='Ivy Profile.jpg'/> -->
         <h4 class='pitch'>Hi, I'm Marc and I am a software engineer and dance artist.</h1>
-        <div class='blurb'>
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
-        </div>
-        <div class='blurb'>
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
-        </div>
-        <div class='blurb'>
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+        <div class='grid-3-columns'>
+            <div class='blurb'>
+                <h2>Lorem ipsum dolor sit amet</h2>
+                <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+            </div>
+            <div class='blurb'>
+                <h2>Lorem ipsum dolor sit amet</h2>
+                <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+            </div>
+            <div class='blurb'>
+                <h2>Lorem ipsum dolor sit amet</h2>
+                <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+            </div>
         </div>
         <!-- <video>
             <source src='https://youtu.be/HfH4BONEcgU'/>
