--- a/porfolio.html
+++ b/porfolio.html
@@ -8,12 +8,14 @@
     <body>
         <nav class='navbar'>
             <h1 class='nav-name'>Marc Ferraro</h1>
-            <a href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
-            <a href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
-            <a href='https://marc-ferraro.medium.com/'>Medium</a>
+            <span class='nav-links'>
+                <a href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
+                <a href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
+                <a href='https://marc-ferraro.medium.com/'>Medium</a>
+            </span>
         </nav>
-        <!-- <img class='profile-pic' src='Ivy Profile.jpg'/> -->
-        <h4 class='pitch'>Hi, I'm Marc and I am a software engineer and dance artist.</h1>
+        <img class='profile-pic' src='Ivy Profile.jpg'/>
+        <h4 class='pitch'>Hi, I'm Marc and I'm a software engineer and dance artist.</h1>
         <div class='grid-3-columns'>
             <div class='blurb'>
                 <h2>Lorem ipsum dolor sit amet</h2>
