--- a/porfolio.html
+++ b/porfolio.html
@@ -8,11 +8,11 @@
     <body>
         <nav class='navbar'>
             <h1 class='nav-name'>Marc Ferraro</h1>
-            <span class='nav-links'>
-                <a href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
-                <a href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
-                <a href='https://marc-ferraro.medium.com/'>Medium</a>
-            </span>
+            <ul class='nav-links'>
+                <li><a href='https://github.com/marcferraro?tab=repositories'>GitHub</a></li>
+                <li><a href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a></li>
+                <li><a href='https://marc-ferraro.medium.com/'>Medium</a></li>
+            </ul>
         </nav>
         <img class='profile-pic' src='Ivy Profile.jpg'/>
         <h4 class='pitch'>Hi, I'm Marc and I'm a software engineer and dance artist.</h1>
