--- a/porfolio.html
+++ b/porfolio.html
@@ -6,16 +6,18 @@
         <link rel='stylesheet' href='engineering.css'>
     </head>
     <body>
-        <nav class='navbar'>
-            <h1 class='nav-name'>Marc Ferraro</h1>
-            <span class='nav-links'>
-                <a href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
-                <a href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
-                <a href='https://marc-ferraro.medium.com/'>Medium</a>
-            </span>
-        </nav>
-        <img class='profile-pic' src='Ivy Profile.jpg'/>
+        <head>
+            <nav class='navbar'>
+                <h1 class='nav-name'>Marc Ferraro</h1>
+                <span class='nav-links'>
+                    <a href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
+                    <a href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
+                    <a href='https://marc-ferraro.medium.com/'>Medium</a>
+                </span>
+            </nav>
+        </head>
         <h4 class='pitch'>Hi, I'm Marc and I'm a software engineer and dance artist.</h1>
+        <img class='profile-pic' src='Ivy Profile.jpg'/>
         <div class='grid-3-columns'>
             <div class='blurb'>
                 <h2>Lorem ipsum dolor sit amet</h2>
