fixed to header

--- a/porfolio.html
+++ b/porfolio.html
@@ -6,7 +6,7 @@
         <link rel='stylesheet' href='engineering.css'>
     </head>
     <body>
-        <head>
+        <header>
             <nav class='navbar'>
                 <h1 class='nav-name'>Marc Ferraro</h1>
                 <span class='nav-links'>
@@ -15,7 +15,7 @@
                     <a href='https://marc-ferraro.medium.com/'>Medium</a>
                 </span>
             </nav>
-        </head>
+        </header>
         <h4 class='pitch'>Hi, I'm Marc and I'm a software engineer and dance artist.</h1>
         <img class='profile-pic' src='Ivy Profile.jpg'/>
         <div class='grid-3-columns'>
