--- a/porfolio.html
+++ b/porfolio.html
@@ -16,7 +16,9 @@
                 </span>
             </nav>
         </header>
-        <h4 class='pitch'>Hi, I'm Marc and I'm a software engineer and dance artist.</h1>
+        <section id='intro'>
+            <h4 class='pitch'>Hi, I'm Marc and I'm a software engineer and dance artist.</h1>
+        </section>
         <img class='profile-pic' src='Ivy Profile.jpg'/>
         <div class='grid-3-columns'>
             <div class='blurb'>
