--- a/porfolio.html
+++ b/porfolio.html
@@ -19,7 +19,7 @@
         <section id='intro'>
             <h4 class='pitch'>Hi, I'm Marc and I'm a software engineer and dance artist.</h1>
         </section>
-        <section id='about'>
+        <section id='bio'>
             <img class='profile-pic' src='Ivy Profile.jpg'/>
             <div class='grid-3-columns'>
                 <div class='blurb'>
