--- a/porfolio.html
+++ b/porfolio.html
@@ -42,5 +42,8 @@
             </video> -->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/HfH4BONEcgU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
+        <section id='blogs'>
+            
+        </section>
     </body>
 </html>
