--- a/porfolio.html
+++ b/porfolio.html
@@ -17,7 +17,7 @@
             </nav>
         </header>
         <section id='intro'>
-            <h4 class='pitch'>Hi, I'm Marc and I'm a software engineer and dance artist.</h1>
+            <h1 class='pitch'>Hi, I'm Marc and I'm a software engineer and dance artist.</h1>
         </section>
         <section id='bio'>
             <img class='profile-pic' src='Ivy Profile.jpg'/>
@@ -36,14 +36,25 @@
                 </div>
             </div>
         </section>
-        <section id='demos'>
+        <section id='demos' class='demos'>
             <!-- <video>
                 <source src='https://youtu.be/HfH4BONEcgU'/>
             </video> -->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/HfH4BONEcgU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
-        <section id='blogs'>
-            
+        <section id='blogs' class='blogs'>
+            <h1 class='section-header'>Blog</h1>
+            <div class='blog-container'>
+                <div id='1' class='blog-card'>
+
+                </div>
+                <div id='2' class='blog-card'>
+
+                </div>
+                <div id='3' class='blog-card'>
+
+                </div>
+            </div>
         </section>
     </body>
 </html>
