blogs finally aligned!

--- a/porfolio.html
+++ b/porfolio.html
@@ -46,13 +46,19 @@
             <h1 class='section-header'>Blog</h1>
             <div class='blog-container'>
                 <div id='1' class='blog-card'>
-
+                    Lorem ipsum dolor sit amet
                 </div>
                 <div id='2' class='blog-card'>
-
+                    Lorem ipsum dolor sit amet
                 </div>
                 <div id='3' class='blog-card'>
-
+                    Lorem ipsum dolor sit amet
+                </div>
+                <div id='4' class='blog-card'>
+                    Lorem ipsum dolor sit amet
+                </div>
+                <div id='5' class='blog-card'>
+                    Lorem ipsum dolor sit amet
                 </div>
             </div>
         </section>
