--- a/porfolio.html
+++ b/porfolio.html
@@ -16,7 +16,7 @@
                 </span>
             </nav>
         </header>
-        <section id='intro'>
+        <section id='intro' class='intro'>
             <h1 class='pitch'>Hi, I'm Marc and I'm a software engineer and dance artist.</h1>
         </section>
         <section id='bio'>
