--- a/porfolio.html
+++ b/porfolio.html
@@ -9,16 +9,18 @@
         <header>
             <nav class='navbar'>
                 <h1 class='nav-name'>Marc Ferraro</h1>
-                <span class='nav-links'>
+                <span class='nav-links-container'>
                     <a href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
                     <a href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
                     <a href='https://marc-ferraro.medium.com/'>Medium</a>
                 </span>
             </nav>
         </header>
+
         <section id='intro' class='intro'>
             <h1 class='pitch'>Hi, I'm Marc and I'm a software engineer and dance artist.</h1>
         </section>
+
         <section id='bio'>
             <img class='profile-pic' src='Ivy Profile.jpg'/>
             <div class='grid-3-columns'>
