--- a/porfolio.html
+++ b/porfolio.html
@@ -10,9 +10,9 @@
             <nav class='navbar'>
                 <h1 class='nav-name'>Marc Ferraro</h1>
                 <span class='nav-links-container'>
-                    <a href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
-                    <a href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
-                    <a href='https://marc-ferraro.medium.com/'>Medium</a>
+                    <a class='nav-links' href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
+                    <a class='nav-links' href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
+                    <a class='nav-links' href='https://marc-ferraro.medium.com/'>Medium</a>
                 </span>
             </nav>
         </header>
