'comments' added and flex for intro

--- a/porfolio.html
+++ b/porfolio.html
@@ -18,7 +18,7 @@
         </header>
 
         <section id='intro' class='intro'>
-            <h1 class='pitch'>Hi, I'm Marc and I'm a software engineer and dance artist.</h1>
+            <h1 class='pitch'><p class='pitch-comment'>// </p>Hi, I'm Marc Ferraro, <br> <p class='pitch-comment'>// </p>a software engineer <br> <p class='pitch-comment'>// </p>and dance artist based in Chicago.</h1>
         </section>
 
         <section id='bio'>
