content container and color for 'comments'

--- a/porfolio.html
+++ b/porfolio.html
@@ -16,53 +16,55 @@
                 </span>
             </nav>
         </header>
-
-        <section id='intro' class='intro'>
-            <h1 class='pitch'><p class='pitch-comment'>// </p>Hi, I'm Marc Ferraro, <br> <p class='pitch-comment'>// </p>a software engineer <br> <p class='pitch-comment'>// </p>and dance artist based in Chicago.</h1>
-        </section>
-
-        <section id='bio'>
-            <img class='profile-pic' src='Ivy Profile.jpg'/>
-            <div class='grid-3-columns'>
-                <div class='blurb'>
-                    <h2>Lorem ipsum dolor sit amet</h2>
-                    <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+        
+        <div class='content-container'>
+            <section id='intro' class='intro'>
+                <h1 class='pitch'><p class='pitch-comment'>// </p>Hi, I'm Marc Ferraro, <br> <p class='pitch-comment'>// </p>a software engineer <br> <p class='pitch-comment'>// </p>and dance artist based in Chicago.</h1>
+            </section>
+    
+            <section id='bio'>
+                <img class='profile-pic' src='Ivy Profile.jpg'/>
+                <div class='grid-3-columns'>
+                    <div class='blurb'>
+                        <h2>Lorem ipsum dolor sit amet</h2>
+                        <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+                    </div>
+                    <div class='blurb'>
+                        <h2>Lorem ipsum dolor sit amet</h2>
+                        <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+                    </div>
+                    <div class='blurb'>
+                        <h2>Lorem ipsum dolor sit amet</h2>
+                        <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+                    </div>
                 </div>
-                <div class='blurb'>
-                    <h2>Lorem ipsum dolor sit amet</h2>
-                    <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+            </section>
+            <section id='demos' class='demos'>
+                <!-- <video>
+                    <source src='https://youtu.be/HfH4BONEcgU'/>
+                </video> -->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HfH4BONEcgU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
+            <section id='blogs' class='blogs'>
+                <h1 class='section-header'>Blog</h1>
+                <div class='blog-container'>
+                    <div id='1' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='2' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='3' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='4' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
                 </div>
-                <div class='blurb'>
-                    <h2>Lorem ipsum dolor sit amet</h2>
-                    <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
-                </div>
-            </div>
-        </section>
-        <section id='demos' class='demos'>
-            <!-- <video>
-                <source src='https://youtu.be/HfH4BONEcgU'/>
-            </video> -->
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/HfH4BONEcgU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </section>
-        <section id='blogs' class='blogs'>
-            <h1 class='section-header'>Blog</h1>
-            <div class='blog-container'>
-                <div id='1' class='blog-card'>
-                    Lorem ipsum dolor sit amet
-                </div>
-                <div id='2' class='blog-card'>
-                    Lorem ipsum dolor sit amet
-                </div>
-                <div id='3' class='blog-card'>
-                    Lorem ipsum dolor sit amet
-                </div>
-                <div id='4' class='blog-card'>
-                    Lorem ipsum dolor sit amet
-                </div>
-                <div id='5' class='blog-card'>
-                    Lorem ipsum dolor sit amet
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </body>
 </html>
