--- a/porfolio.html
+++ b/porfolio.html
@@ -19,7 +19,7 @@
         
         <div class='content-container'>
             <section id='intro' class='intro'>
-                <h1 class='pitch'><p class='pitch-comment'>// </p>Hi, I'm Marc Ferraro, <br> <p class='pitch-comment'>// </p>a software engineer <br> <p class='pitch-comment'>// </p>and dance artist based in Chicago.</h1>
+                <h1 class='pitch'><p class='pitch-comment'>// </p>Hi, I'm Marc Ferraro, <br> <p class='pitch-comment'>// </p>a software engineer <br> <p class='pitch-comment'>// </p>and dance artist based in Chicago. |</h1>
             </section>
     
             <section id='bio' class='bio'>
