nav link dividers

--- a/porfolio.html
+++ b/porfolio.html
@@ -11,7 +11,9 @@
                 <h1 class='nav-name'>Marc Ferraro</h1>
                 <span class='nav-links-container'>
                     <a class='nav-links' href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
+                    <span>/</span>
                     <a class='nav-links' href='https://www.linkedin.com/in/marc-ferraro/'>LinkedIn</a>
+                    <span>/</span>
                     <a class='nav-links' href='https://marc-ferraro.medium.com/'>Medium</a>
                 </span>
             </nav>
