--- a/porfolio.html
+++ b/porfolio.html
@@ -25,7 +25,7 @@
             </section>
     
             <section id='bio' class='bio'>
-                <img class='profile-pic' src='Ivy Profile.jpg'/>
+                <img class='profile-pic' src='Ivy Profile.jpg' alt='A portrait of Marc Ferraro, smiling in front of a background of ivy.'/>
                 <div class='grid-3-columns'>
                     <div class='blurb'>
                         <h2>About</h2>
