--- a/porfolio.html
+++ b/porfolio.html
@@ -81,6 +81,42 @@
                     <div id='5' class='blog-card'>
                         Lorem ipsum dolor sit amet
                     </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
+                    <div id='5' class='blog-card'>
+                        Lorem ipsum dolor sit amet
+                    </div>
                 </div>
             </section>
         </div>
