blog titles updated

--- a/porfolio.html
+++ b/porfolio.html
@@ -67,13 +67,13 @@
                 <h1 class='section-header'><p class='pitch-comment'>// </p>Blog</h1>
                 <div class='blog-container'>
                     <div id='1' class='blog-card'>
-                        Lorem ipsum dolor sit amet
+                        Ruby Splat Operator
                     </div>
                     <div id='2' class='blog-card'>
-                        Lorem ipsum dolor sit amet
+                        Expressive Code and Labanotation
                     </div>
                     <div id='3' class='blog-card'>
-                        Lorem ipsum dolor sit amet
+                        Generative Art
                     </div>
                 </div>
             </section>
