p tags added to blog cards

--- a/porfolio.html
+++ b/porfolio.html
@@ -67,13 +67,13 @@
                 <h1 class='section-header'><p class='pitch-comment'>// </p>Blog</h1>
                 <div class='blog-container'>
                     <div id='1' class='blog-card'>
-                        Ruby Splat Operator
+                        <p>Ruby Splat Operator</p>
                     </div>
                     <div id='2' class='blog-card'>
-                        Expressive Code and Labanotation
+                        <p>Expressive Code and Labanotation</p>
                     </div>
                     <div id='3' class='blog-card'>
-                        Generative Art
+                        <p>Generative Art</p>
                     </div>
                 </div>
             </section>
