blog card ids updated

--- a/porfolio.html
+++ b/porfolio.html
@@ -66,13 +66,13 @@
             <section id='blogs' class='blogs'>
                 <h1 class='section-header'><p class='pitch-comment'>// </p>Blog</h1>
                 <div class='blog-container'>
-                    <div id='1' class='blog-card'>
+                    <div id='blog-card-1' class='blog-card'>
                         <p>Ruby Splat Operator</p>
                     </div>
-                    <div id='2' class='blog-card'>
+                    <div id='blog-card-2' class='blog-card'>
                         <p>Expressive Code and Labanotation</p>
                     </div>
-                    <div id='3' class='blog-card'>
+                    <div id='blog-card-3' class='blog-card'>
                         <p>Generative Art</p>
                     </div>
                 </div>
