lorem ipsum cut, new blurb

--- a/porfolio.html
+++ b/porfolio.html
@@ -29,7 +29,9 @@
                 <div class='grid-3-columns'>
                     <div class='blurb'>
                         <h2>About</h2>
-                        <p>consectetur adipiscing elit. Proin euismod consectetur massa id fringilla. Nulla sollicitudin purus vitae augue ultrices rutrum. Donec in nulla ut ante aliquet fringilla. Donec interdum neque quam, non feugiat sem interdum sit amet. Cras egestas, lorem ultricies mattis rhoncus, dui lorem vulputate arcu, ut vulputate mauris enim eu felis. In hac habitasse platea dictumst. Maecenas maximus, quam in lacinia auctor, lacus sem aliquet dolor, ac dictum tortor lectus in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+                        <p>
+                            Software engineer, choreographer, and dance instructor based in Chicago. Lifelong collaborator. I bring a creative approach to code.
+                        </p>
                     </div>
                     <div class='blurb'>
                         <h2>Technologies</h2>
