section header added

--- a/porfolio.html
+++ b/porfolio.html
@@ -60,6 +60,7 @@
                 </div>
             </section>
             <section id='demos' class='demos'>
+                <h1 class='section-header'><p class='pitch-comment'>// </p>Demos</h1>
                 <!-- <video>
                     <source src='https://youtu.be/HfH4BONEcgU'/>
                 </video> -->
