--- a/porfolio.html
+++ b/porfolio.html
@@ -33,30 +33,31 @@
                             Software engineer, choreographer, and dance instructor based in Chicago. Lifelong collaborator. I bring a creative approach to code.
                         </p>
                     </div>
-                    <div class='blurb'>
-                        <h2>Technologies</h2>
-                        <ul>
-                            <li>React</li>
-                            <li>Redux</li>
-                            <li>JavaScript</li>
-                            <li>Ruby on Rails</li>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>Amazon S2</li>
-                            <li>Material UI</li>
-                            <li>Bootstrap</li>
-                            <li>Sinatra</li>
-                            <li>Git</li>
-                            <li>SQL</li>
-                            
-                        </ul>
-                        <h2>Currently Learning:</h2>
-                        <ul>
-                            <li>Python</li>
-                            <li>Flask</li>
-                        </ul>
-                        <p>React, Redux, JavaScript, Ruby on Rails, HTML, CSS, Amazon S2, Material UI, Bootstrap, Sinatra, Git, SQL. Currently learning: Python, Flask.</p>
-                    </div>
+                </div>
+            </section>
+            <section id='technologies' class='technologies'>
+                <div class='blurb'>
+                    <h2>Technologies</h2>
+                    <ul>
+                        <li>React</li>
+                        <li>Redux</li>
+                        <li>JavaScript</li>
+                        <li>Ruby on Rails</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Amazon S2</li>
+                        <li>Material UI</li>
+                        <li>Bootstrap</li>
+                        <li>Sinatra</li>
+                        <li>Git</li>
+                        <li>SQL</li>
+                    </ul>
+                    <h2>Currently Learning:</h2>
+                    <ul>
+                        <li>Python</li>
+                        <li>Flask</li>
+                    </ul>
+                    <p>React, Redux, JavaScript, Ruby on Rails, HTML, CSS, Amazon S2, Material UI, Bootstrap, Sinatra, Git, SQL. Currently learning: Python, Flask.</p>
                 </div>
             </section>
             <section id='demos' class='demos'>
