--- a/porfolio.html
+++ b/porfolio.html
@@ -24,14 +24,16 @@
                 <h1 class='pitch'><p class='pitch-comment'>// </p>Hi, I'm Marc Ferraro, <br> <p class='pitch-comment'>// </p>a software engineer <br> <p class='pitch-comment'>// </p>and dance artist based in Chicago. <span class='blinking-cursor'>|</span></h1>
             </section>
     
-            <section id='bio' class='bio'>
-                <img class='profile-pic' src='Ivy Profile.jpg' alt='A portrait of Marc Ferraro, smiling in front of a background of ivy.'/>
-                <div class='grid-3-columns'>
-                    <div class='blurb'>
-                        <h2>About</h2>
-                        <p>
-                            Software engineer, choreographer, and dance instructor based in Chicago. Lifelong collaborator. I bring a creative approach to code.
-                        </p>
+            <section id='bio' class='bio-section'>
+                <div class='bio'>
+                    <img class='profile-pic' src='Ivy Profile.jpg' alt='A portrait of Marc Ferraro, smiling in front of a background of ivy.'/>
+                    <div class='grid-3-columns'>
+                        <div class='blurb'>
+                            <h2>About</h2>
+                            <p>
+                                Software engineer, choreographer, and dance instructor based in Chicago. Lifelong collaborator. I bring a creative approach to code.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
