technology section formatting, list wrapper added

--- a/porfolio.html
+++ b/porfolio.html
@@ -38,8 +38,8 @@
                 </div>
             </section>
             <section id='technologies' class='technologies'>
-                <div class='blurb'>
-                    <h2>Technologies</h2>
+                <h2 class='section-header'><p class='pitch-comment'>// </p>Technologies</h2>
+                <div class='tech-list-wrapper'>
                     <ul>
                         <li>React</li>
                         <li>Redux</li>
@@ -47,7 +47,7 @@
                         <li>Ruby on Rails</li>
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>Amazon S2</li>
+                        <li>Amazon S3</li>
                         <li>Material UI</li>
                         <li>Bootstrap</li>
                         <li>Sinatra</li>
@@ -63,7 +63,7 @@
                 </div>
             </section>
             <section id='demos' class='demos'>
-                <h1 class='section-header'><p class='pitch-comment'>// </p>Demos</h1>
+                <h1 class='section-header'><p id='demos-comment' class='pitch-comment'>// </p>Demos</h1>
                 <!-- <video>
                     <source src='https://youtu.be/HfH4BONEcgU'/>
                 </video> -->
