section heights are different, new about look, pitch formatting

--- a/porfolio.html
+++ b/porfolio.html
@@ -29,9 +29,8 @@
                     <img class='profile-pic' src='Ivy Profile.jpg' alt='A portrait of Marc Ferraro, smiling in front of a background of ivy.'/>
                     <div class='grid-3-columns'>
                         <div class='blurb'>
-                            <h2>About</h2>
                             <p>
-                                Software engineer, choreographer, and dance instructor based in Chicago. Lifelong collaborator. I bring a creative approach to code.
+                                Web Developer with roots in dance and dance instruction. Lifelong collaborator. I bring a creative approach to code.
                             </p>
                         </div>
                     </div>
