blogs section rough draft done

--- a/porfolio.html
+++ b/porfolio.html
@@ -72,15 +72,21 @@
             <section id='blogs' class='blogs'>
                 <h1 class='section-header'><p class='pitch-comment'>// </p>Blog</h1>
                 <div class='blog-container'>
-                    <div id='blog-card-1' class='blog-card'>
-                        <p>Ruby Splat Operator</p>
-                    </div>
-                    <div id='blog-card-2' class='blog-card'>
-                        <p>Expressive Code and Labanotation</p>
-                    </div>
-                    <div id='blog-card-3' class='blog-card'>
-                        <p>Generative Art</p>
-                    </div>
+                    <a href='https://medium.com/codex/win-all-your-arguments-with-rubys-splat-operator-86ad8001bcb1'>
+                        <div id='blog-card-1' class='blog-card'>
+                            <p>Ruby Splat Operator</p>
+                        </div>
+                    </a>
+                    <a href='https://marc-ferraro.medium.com/expressive-code-and-labanotation-927bcf49509d'>
+                        <div id='blog-card-2' class='blog-card'>
+                            <p>Expressive Code and Labanotation</p>
+                        </div>
+                    </a>
+                    <a href='https://marc-ferraro.medium.com/random-rules-why-you-should-check-out-generative-art-61948b54da87'>
+                        <div id='blog-card-3' class='blog-card'>
+                            <p>Generative Art</p>
+                        </div>
+                    </a>
                 </div>
             </section>
         </div>
