--- a/porfolio.html
+++ b/porfolio.html
@@ -1,4 +1,7 @@
 <html lang='en'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Crete+Round:ital@1&family=DM+Serif+Display:ital@0;1&family=Martel:wght@400;700;800;900&family=Merriweather:wght@900&family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
     <head>
         <title>
             Marc Ferraro
@@ -20,7 +23,17 @@
         <!-- </header> -->
         <div class='content-container'>
             <section id='intro' class='intro'>
-                <h1 class='pitch'><p class='pitch-comment'>// </p>Hi, I'm Marc Ferraro, <br> <p class='pitch-comment'>// </p>a software engineer <br> <p class='pitch-comment'>// </p>and dance artist based in Chicago. <span class='blinking-cursor'>|</span></h1>
+                <h1 class='pitch'><p class='pitch-comment'>// </p>Hi, I'm Marc Ferraro, <br> <p class='pitch-comment'>// </p>a software engineer <br> <p class='pitch-comment'>// </p>and dance artist <br> <p class='pitch-comment'>// </p> based in Chicago. <span class='blinking-cursor'>|</span></h1>
+                
+                <div>
+                    <h2>Menu</h2>
+                    <p>About</p>
+                    <p>Technologies</p>
+                    <p>Demos</p>
+                    <p>Blogs</p>
+                </div>
+                <!-- <h1 class='pitch-comment'>// </h1>
+                <h1 class='pitch'>Hi, I'm Marc Ferraro, <br> a software engineer <br> and dance artist <br>  based in Chicago. <span class='blinking-cursor'>|</span></h1> -->
             </section>
     
             <section id='bio' class='bio-section'>
@@ -40,37 +53,43 @@
             <section id='technologies' class='technologies'>
                 <h2 class='section-header'><p class='pitch-comment'>// </p>Technologies</h2>
                 <div class='tech-list-wrapper'>
-                    <ul>
-                        <li>React</li>
-                        <li>Redux</li>
-                        <li>JavaScript</li>
-                        <li>Ruby on Rails</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Amazon S3</li>
-                        <li>Material UI</li>
-                        <li>Bootstrap</li>
-                        <li>Sinatra</li>
-                        <li>Git</li>
-                        <li>SQL</li>
-                    </ul>
-                    <h2>Currently Learning:</h2>
-                    <ul>
-                        <li>Python</li>
-                        <li>Flask</li>
-                    </ul>
-                    <p>React, Redux, JavaScript, Ruby on Rails, HTML, CSS, Amazon S2, Material UI, Bootstrap, Sinatra, Git, SQL. Currently learning: Python, Flask.</p>
+                    <div class='my-stack'>
+                        <h2>My Stack</h2>
+                        <ul>
+                            <li>React</li>
+                            <li>Redux</li>
+                            <li>JavaScript</li>
+                            <li>Ruby on Rails</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Amazon S3</li>
+                            <li>Material UI</li>
+                            <li>Bootstrap</li>
+                            <li>Sinatra</li>
+                            <li>Git</li>
+                            <li>SQL</li>
+                        </ul>
+                    </div>
+                    <div class='currently-learning'>
+                        <h2>Currently Learning:</h2>
+                        <ul>
+                            <li>Python</li>
+                            <li>Flask</li>
+                        </ul>
+                    </div>
+                    <!-- <p>React, Redux, JavaScript, Ruby on Rails, HTML, CSS, Amazon S2, Material UI, Bootstrap, Sinatra, Git, SQL. Currently learning: Python, Flask.</p> -->
                 </div>
             </section>
             <section id='demos' class='demos'>
-                <h1 class='section-header'><p id='demos-comment' class='pitch-comment'>// </p>Demos</h1>
+                <h2 class='section-header'><p id='demos-comment' class='pitch-comment'>// </p>Demos</h2>
                 <!-- <video>
                     <source src='https://youtu.be/HfH4BONEcgU'/>
                 </video> -->
                 <iframe class='demo-embed' width="560" height="315" src="https://www.youtube.com/embed/HfH4BONEcgU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
+
             <section id='blogs' class='blogs'>
-                <h1 class='section-header'><p class='pitch-comment'>// </p>Blog</h1>
+                <h2 class='section-header'><p class='pitch-comment'>// </p>Blog</h2>
                 <div class='blog-container'>
                     <a href='https://medium.com/codex/win-all-your-arguments-with-rubys-splat-operator-86ad8001bcb1'>
                         <div id='blog-card-1' class='blog-card'>
