basic side-bar implemented

--- a/porfolio.html
+++ b/porfolio.html
@@ -20,18 +20,20 @@
                     <a class='nav-links' href='https://marc-ferraro.medium.com/'>Medium</a>
                 </span>
             </nav>
+            <nav class='side-bar'>
+                <div class='side-bar-links'>
+                    <p>About Me</p>
+                    <p>Technologies</p>
+                    <p>Demos</p>
+                    <p>Blogs</p>
+                    <p>Resume</p>
+                    <p>CV</p>
+                </div>
+            </nav>
         <!-- </header> -->
         <div class='content-container'>
             <section id='intro' class='intro'>
                 <h1 class='pitch'><p class='pitch-comment'>// </p>Hi, I'm Marc Ferraro, <br> <p class='pitch-comment'>// </p>a software engineer <br> <p class='pitch-comment'>// </p>and dance artist <br> <p class='pitch-comment'>// </p> based in Chicago. <span class='blinking-cursor'>|</span></h1>
-                
-                <div>
-                    <h2>Menu</h2>
-                    <p>About</p>
-                    <p>Technologies</p>
-                    <p>Demos</p>
-                    <p>Blogs</p>
-                </div>
                 <!-- <h1 class='pitch-comment'>// </h1>
                 <h1 class='pitch'>Hi, I'm Marc Ferraro, <br> a software engineer <br> and dance artist <br>  based in Chicago. <span class='blinking-cursor'>|</span></h1> -->
             </section>
