nav buttons with no JS!

--- a/porfolio.html
+++ b/porfolio.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <!-- <header> -->
+            <a name="top"></a>
             <nav class='navbar'>
                 <h1 class='nav-name'>Marc Ferraro</h1>
                 <span class='nav-links-container'>
@@ -22,12 +23,13 @@
             </nav>
             <nav class='side-bar'>
                 <div class='side-bar-links'>
-                    <p>About Me</p>
-                    <p>Technologies</p>
-                    <p>Demos</p>
-                    <p>Blogs</p>
+                    <a href='#bio'><p>About Me</p></a>
+                    <a href='#technologies'><p>Technologies</p></a>
+                    <a href='#demos'><p>Demos</p></a>
+                    <a href='#blogs'><p>Blogs</p></a>
                     <p>Resume</p>
                     <p>CV</p>
+                    <a href='#top'>⬆</a>
                 </div>
             </nav>
         <!-- </header> -->
