wait for font load, cleaning up comments

--- a/porfolio.html
+++ b/porfolio.html
@@ -1,7 +1,7 @@
 <html lang='en'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Crete+Round:ital@1&family=DM+Serif+Display:ital@0;1&family=Martel:wght@400;700;800;900&family=Merriweather:wght@900&family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Crete+Round:ital@1&family=DM+Serif+Display:ital@0;1&family=Martel:wght@400;700;800;900&family=Merriweather:wght@900&family=Roboto:ital,wght@1,900&display=block" rel="stylesheet">
     <head>
         <title>
             Marc Ferraro
@@ -36,8 +36,6 @@
         <div class='content-container'>
             <section id='intro' class='intro'>
                 <h1 class='pitch'><p class='pitch-comment'>// </p>Hi, I'm Marc Ferraro, <br> <p class='pitch-comment'>// </p>a software engineer <br> <p class='pitch-comment'>// </p>and dance artist <br> <p class='pitch-comment'>// </p> based in Chicago. <span class='blinking-cursor'>|</span></h1>
-                <!-- <h1 class='pitch-comment'>// </h1>
-                <h1 class='pitch'>Hi, I'm Marc Ferraro, <br> a software engineer <br> and dance artist <br>  based in Chicago. <span class='blinking-cursor'>|</span></h1> -->
             </section>
     
             <section id='bio' class='bio-section'>
@@ -81,14 +79,10 @@
                             <li>Flask</li>
                         </ul>
                     </div>
-                    <!-- <p>React, Redux, JavaScript, Ruby on Rails, HTML, CSS, Amazon S2, Material UI, Bootstrap, Sinatra, Git, SQL. Currently learning: Python, Flask.</p> -->
                 </div>
             </section>
             <section id='demos' class='demos'>
                 <h2 class='section-header'><p id='demos-comment' class='pitch-comment'>// </p>Demos</h2>
-                <!-- <video>
-                    <source src='https://youtu.be/HfH4BONEcgU'/>
-                </video> -->
                 <iframe class='demo-embed' width="560" height="315" src="https://www.youtube.com/embed/HfH4BONEcgU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
 
