smooth scroll, side-bar hover effect

--- a/porfolio.html
+++ b/porfolio.html
@@ -1,7 +1,7 @@
 <html lang='en'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Crete+Round:ital@1&family=DM+Serif+Display:ital@0;1&family=Martel:wght@400;700;800;900&family=Merriweather:wght@900&family=Roboto:ital,wght@1,900&display=block" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Crete+Round:ital@1&family=DM+Serif+Display:ital@0;1&family=Martel:wght@400;700;800;900&family=Merriweather:wght@900&family=Roboto:ital,wght@1,900&display=block" rel="stylesheet">
     <head>
         <title>
             Marc Ferraro
@@ -29,7 +29,7 @@
                     <a href='#blogs'><p>Blogs</p></a>
                     <p>Resume</p>
                     <p>CV</p>
-                    <a href='#top'>⬆</a>
+                    <a href='#top'><p>⬆</p></a>
                 </div>
             </nav>
         <!-- </header> -->
@@ -81,6 +81,7 @@
                     </div>
                 </div>
             </section>
+
             <section id='demos' class='demos'>
                 <h2 class='section-header'><p id='demos-comment' class='pitch-comment'>// </p>Demos</h2>
                 <iframe class='demo-embed' width="560" height="315" src="https://www.youtube.com/embed/HfH4BONEcgU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
