name changed to id

--- a/porfolio.html
+++ b/porfolio.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <!-- <header> -->
-            <a name="top"></a>
+            <a id="top"></a>
             <nav class='navbar'>
                 <h1 class='nav-name'>Marc Ferraro</h1>
                 <span class='nav-links-container'>
